--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "next": "^9.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
+  },
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   }
 }
